gccida/g3/redirect_edge_and_branch
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/redirect_edge_and_branch/src/cfgrtl.c:1448:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v52.rtwint = ( __int64)v51[1].fld[0]; 
                       ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/redirect_edge_and_branch/src/cfgrtl.c:1534:37: error: use of undeclared identifier 'machine_mode'
v33 = gen_rtx_fmt_u00( LABEL_REF, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v24); 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/redirect_edge_and_branch/src/cfgrtl.c:1550:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v41 = ( __int64)v40[1]; 
                ^~~~~~
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/redirect_edge_and_branch/src/obj/cfgrtl.o] Error 1
